[package]
name = "va_list"
version = "0.1.0"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
build = "build.rs"
edition = "2021"

description = "Library to handle va_list"
repository = "https://github.com/GuillaumeGomez/va_list-rs"
license = "MIT"

keywords = ["va_arg", "va_list", "C"]

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "^0.2"
